<resources>
    <!-- common -->
    <string name="app_name">Weather Helper</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="error_unexpected">Unexpected error. please reboot application</string>
    <string name="empty"> </string>

    <!-- place -->
    <string name="place_common_cant_load_address">No description of the selected location</string>
    <string name="place_add_dialog_enter_place_name">Enter name of the place</string>
    <string name="place_add_error">Selected place already added</string>
    <string name="place_add_error_google_places">Sorry the service is temporarily unavailable</string>
    <string name="place_common_error_cant_connect">Can\'t connect to server</string>
    <string name="place_add_not_found">Name not fixed</string>

    <!--weather -->
    <string name="weather_action_settings">Settings</string>
    <string name="weather_change">Change</string>

    <!--weather common-->
    <string name="weather_wind">m/s Wind</string>
    <string name="weather_humidity">humidity</string>
    <string name="weather_delete">DELETE</string>
    <string name="weather_mock_place_name">Place name</string>
    <string name="weather_mock_description">Mon, 11:00 AM, Mostly Sunny</string>
    <string name="weather_mock_tmp">25</string>
    <string name="weather_mock_degree">℃</string>
    <string name="weather_mock_wind">23 km/h Winds</string>
    <string name="weather_mock_humidity">25% Humidity</string>
    <string name="weather_ask_delete">Are you sure want delete %s?</string>

    <!--weather detail-->
    <string name="weather_detail_daily_title">Daily</string>

    <!--settings-->
    <string name="settings_unit">Unit of measurement</string>
    <string name="settings_unit_key">degree</string>
    <string name="settings_unit_default">\u2103</string>
    <string-array name="settings_degree_arr">
        <item>@string/settings_unit_default</item>
        <item>K</item>
    </string-array>

    <string name="settings_update">Update period</string>
    <string name="settings_update_key">update</string>
    <string name="settings_update_default">6</string>
    <string-array name="settings_update_arr_names">
        <item>Do not update</item>
        <item>1 hour</item>
        <item>2 hour</item>
        <item>3 hour</item>
        <item>6 hour</item>
        <item>12 hour</item>
    </string-array>

    <string-array name="settings_update_arr_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
    </string-array>

    <string name="settings_hours">Max hours points</string>
    <string name="settings_hours_key">hours</string>
    <string name="settings_hours_default">6</string>
    <string-array name="settings_hours_arr_names">
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
    </string-array>

    <string name="settings_degree_difference_celsius">273.15</string>
    <string name="settings_degree_difference_kelvin">0.0</string>
    <string name="settings_bg_update_time">-10800000</string>

    <!--weatherUpdate description-->
    <string name="thunderstorm_with_light_rain">thunderstorm with light rain</string>
    <string name="thunderstorm_with_rain">thunderstorm with rain</string>
    <string name="thunderstorm_with_heavy_rain">thunderstorm with heavy rain</string>
    <string name="light_thunderstorm">light thunderstorm</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="heavy_thunderstorm">heavy thunderstorm</string>
    <string name="ragged_thunderstorm">ragged thunderstorm</string>
    <string name="thunderstorm_with_light_drizzle">thunderstorm with light drizzle</string>
    <string name="thunderstorm_with_drizzle">thunderstorm with drizzle</string>
    <string name="thunderstorm_with_heavy_drizzle">thunderstorm with heavy drizzle</string>
    <string name="light_intensity_drizzle">light intensity drizzle</string>
    <string name="drizzle">drizzle</string>
    <string name="heavy_intensity_drizzle">heavy intensity drizzle</string>
    <string name="light_intensity_drizzle_rain">light intensity drizzle rain</string>
    <string name="drizzle_rain">drizzle rain</string>
    <string name="heavy_intensity_drizzle_rain">heavy intensity drizzle rain</string>
    <string name="shower_rain_and_drizzle">shower rain and drizzle</string>
    <string name="heavy_shower_rain_and_drizzle">heavy shower rain and drizzle</string>
    <string name="shower_drizzle">shower drizzle</string>
    <string name="light_rain">light rain</string>
    <string name="moderate_rain">moderate rain</string>
    <string name="heavy_intensity_rain">heavy intensity rain</string>
    <string name="very_heavy_rain">very heavy rain</string>
    <string name="extreme_rain">extreme rain</string>
    <string name="freezing_rain">freezing rain</string>
    <string name="light_intensity_shower_rain">light intensity shower rain</string>
    <string name="shower_rain">shower rain</string>
    <string name="heavy_intensity_shower_rain">heavy intensity shower rain</string>
    <string name="ragged_shower_rain">ragged shower rain</string>
    <string name="light_snow">light snow</string>
    <string name="snow">snow</string>
    <string name="heavy_snow">heavy snow</string>
    <string name="sleet">sleet</string>
    <string name="shower_sleet">shower sleet</string>
    <string name="light_rain_and_snow">light rain and snow</string>
    <string name="rain_and_snow">rain and snow</string>
    <string name="light_shower_snow">light shower snow</string>
    <string name="shower_snow">shower snow</string>
    <string name="heavy_shower_snow">heavy shower snow</string>
    <string name="mist">mist</string>
    <string name="smoke">smoke</string>
    <string name="haze">haze</string>
    <string name="sand_dust_whirls">sand, dust whirls</string>
    <string name="fog">fog</string>
    <string name="sand">sand</string>
    <string name="dust">dust</string>
    <string name="volcanic_ash">volcanic ash</string>
    <string name="squalls">squalls</string>
    <string name="tornado">tornado</string>
    <string name="clear_sky">clear sky</string>
    <string name="few_clouds">few clouds</string>
    <string name="scattered_clouds">scattered clouds</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="overcast_clouds">overcast clouds</string>
</resources>
