<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
            app:key="degree"
            android:entries="@array/settings_degree_arr"
            android:entryValues="@array/settings_degree_arr"
            android:defaultValue="\u2103"
            android:summary="%s"
            app:title="@string/settings_unit"/>

    <ListPreference
            app:key="update"
            android:entries="@array/settings_update_arr_names"
            android:entryValues="@array/settings_update_arr_values"
            android:defaultValue="@string/settings_update_default"
            android:summary="%s"
            app:title="@string/settings_update"/>

    <ListPreference
            app:key="hours"
            android:entries="@array/settings_hours_arr_names"
            android:entryValues="@array/settings_hours_arr_names"
            android:defaultValue="@string/settings_hours_default"
            android:summary="%s"
            app:title="@string/settings_hours"/>

</androidx.preference.PreferenceScreen>